// SonarQube, open source software quality management tool.
// Copyright (C) 2008-2016 SonarSource
// mailto:contact AT sonarsource DOT com
//
// SonarQube is free software; you can redistribute it and/or
// modify it under the terms of the GNU Lesser General Public
// License as published by the Free Software Foundation; either
// version 3 of the License, or (at your option) any later version.
//
// SonarQube is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
// Lesser General Public License for more details.
//
// You should have received a copy of the GNU Lesser General Public License
// along with this program; if not, write to the Free Software Foundation,
// Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.

syntax = "proto2";

package sonarqube.ws.batch;

option java_package = "org.sonarqube.ws";
option java_outer_classname = "Batch";

option optimize_for = SPEED;

// WS batch/project
message WsProjectResponse {
  optional int64 timestamp = 1;
  map<string, Settings> settingsByModule = 2;
  map<string, FileDataByPath> fileDataByModuleAndPath = 3;
  optional int64 lastAnalysisDate = 4;

  message Settings {
    map<string,string> settings = 1;
  }

  message FileDataByPath {
    map<string, FileData> FileDataByPath = 1;
  }

  message FileData {
    optional string hash = 1;
    optional string revision = 2;
  }
}
